src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/DPWithNoCLRSetGet.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:MappingPIGen1="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted"
      xmlns:cc="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted">   
    <cc:Custom_DO_With_Properties  DPWithNotSetGet="test"/>        
</Page>